# trabalho_final_ciencia_de_dados

./: .gitignore  README.md  analyse_csv.ipynb  main.py  pyproject.toml  trabalho_final_afmireski.ipynb
data/datasets/: dataset_final.parquet
data/datasets/inmet_aggregated/: estacoes.csv  estacoes_finais.csv
data/results/baseline/: dataset_final_baseline_results.json
data/results/gravity/i/: dataset_final_gravity_i_results.json  dataset_final_lsvc_results.json  dataset_final_rf_results.json  dataset_final_sgb_results.json
data/results/gravity/ii/: dataset_final_gravity_ii_results.json  dataset_final_lsvc_results.json  dataset_final_rf_results.json  dataset_final_sgb_results.json
data/results/gravity/iii/: dataset_final_gravity_iii_results.json  dataset_final_lsvc_results.json  dataset_final_rf_results.json  dataset_final_sgb_results.json
data/results/periodos/: dataset_final_lsvc_results.json  dataset_final_periodos_results.json  dataset_final_rf_results.json  dataset_final_sgb_results.json
entregaveis/: etapa1.entrega.md  etapa2.entrega.md  etapa3.entrega.md  etapa4.entrega.md
