[project]
name = "trabalho-final-ciencia-de-dados"
version = "0.1.0"
description = "Repositório do trabalho final da disciplina de ciência de dados"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pandas",
    "holidays",
    "duckdb",
    "pyarrow",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "scipy>=1.15",
]
